# zyenlang-v0.1.49

./: .gitignore  00_REPAIR_INSTALL.bat  00_RUN_WITHOUT_INSTALL.bat  00_TEST_ZY.bat  README.md  README.zh-TW.md  SPEC_v0_1.md  pyproject.toml  zyen.py
.zed/: settings.json  tasks.json
apps/: zyide.zy  zyide_gui.zy  zyide_tools.zy  zytk_demo.zy
docs/: bug_v0_1_49_infer_type_dot.md  bug_v0_1_49_spawn_cmd_escape.md  std_collections.md  std_concurrency_gpu.md  std_list.md  std_robotics.md  stdlib_round2_report.md  tk_session_ipc.md  tokenizer_v047.md
examples/: add.zy  any_type_error.zy  bare_compound_error.zy  break_basic.zy  bug1_f_string_scanner.zy  bug2_concat_newline.zy  bug3_cast_list_get_concat.zy  bug4_nested_method_args.zy  bug6_block_scope_for.zy  bug7_list_param_mutate.zy  bug8_list_struct_field.zy  bug9_multiline_list.zy  cast_basic.zy  cmd_basic.zy  cmd_require.zy  collections_basic.zy  compound_assignment.zy  concurrency_gpu_demo.zy  config_basic.zy  const_str.zy  csv_basic.zy  cv_basic.zy  cv_pipeline.zy  decl_defaults.zy  default_args.zy  else_if.zy  for_loop.zy  for_set_step.zy  for_step_bare_compound_ok.zy  fs_path_helpers.zy  fs_term_basic.zy  fstring_arg.zy  fstring_basic.zy  function_declaration.zy  global_let_error.zy  gpu_info.zy  hello.zy  ide_demo.zy  ide_gui_launcher.zy  if_paren.zy  (+49 more)
std/: README.md  bit.zy  check.zy  cmd.zy  config.zy  control.zy  convert.zy  coroutine.zy  csv.zy  cv.zy  filter.zy  geometry.zy  list.zy  mem.zy  motor.zy  pid.zy  prelude.zy  ptr.zy  queue.zy  range.zy  stack.zy  string.zy  term.zy  text.zy  thread.zy  tk.zy  (+1 more)
(+75 files in other folders)
